--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -40,6 +40,11 @@
           <a href="/admin/update">Sửa sản phẩm</a>
         </div>
       </div>
+      <div class="avatar-animation">
+        <div class="avatar-content">
+          <a href="">Đăng xuất</a>
+        </div>
+      </div>
     </div>
   </div>
   
