--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -15,7 +15,7 @@
   </div>
   
   <div class="flash-deal-products">
-    {{#each product}}
+    {{#each flashDealProduct}}
     <div class="product">
       <a href="/product/{{this.slug}}">
         <img src="img/1.jpg" alt="" id="product-1">
@@ -50,7 +50,7 @@
   </div>
   
   <div class="hot-products">
-    {{#each product}}
+    {{#each hotProduct}}
     <div class="product">
       <a href="/product/{{this.slug}}">
         <img src="img/1.jpg" alt="" id="product-1">
@@ -84,7 +84,7 @@
   </div>
 
   <div class="products">
-    {{#each product}}
+    {{#each allProduct}}
     <div class="product">
       <a href="/product/{{this.slug}}">
         <img src="img/1.jpg" alt="" id="product-1">
