--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/introduce.css">
   <link rel="stylesheet" href="/css/navigate.css">
+  <link rel="stylesheet" href="/css/newArrival.css">
   <link rel="stylesheet" href="/css/products.css">
   <link rel="stylesheet" href="/css/update.css">
   <link rel="stylesheet" href="/css/body.css">
