--- a/src/resource/views/partials/navigate.hbs
+++ b/src/resource/views/partials/navigate.hbs
@@ -97,10 +97,10 @@
     </div>
 
     <div style="display: flex; align-items: center; padding: 0 15px 0;" class="dropdown-title">
-      <h5>GIỚI THIỆU</h5>
+      <a href="/introduce"><h5>GIỚI THIỆU</h5></a>
     </div>
     <div style="display: flex; align-items: center; padding: 0 15px 0;" class="dropdown-title">
-      <h5>HÀNG MỚI VỀ</h5>
+      <a href="/new-arrival"><h5>HÀNG MỚI VỀ</h5></a>
     </div>
   </div>
 </div>
