--- a/src/public/css/adminCreate.css
+++ b/src/public/css/adminCreate.css
@@ -1,6 +1,5 @@
 .handle-products {
-  padding-top: 170px;
-  padding-bottom: 50px;
+  padding-left: 200px;
   display: flex;
   justify-content: center;
 
