--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -4,18 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
-  <link rel="stylesheet" href="/css/admin.css">
-  <link rel="stylesheet" href="/css/advertise.css">
-  <link rel="stylesheet" href="/css/allProducts.css">
-  <link rel="stylesheet" href="/css/body.css">
-  <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/home.css">
-  <link rel="stylesheet" href="/css/introduce.css">
-  <link rel="stylesheet" href="/css/navigate.css">
-  <link rel="stylesheet" href="/css/newArrival.css">
-  <link rel="stylesheet" href="/css/products.css">
-  <link rel="stylesheet" href="/css/update.css">
+  <link rel="stylesheet" href="/css/userAdvertise.css">
+  <link rel="stylesheet" href="/css/userAllProducts.css">
+  <link rel="stylesheet" href="/css/userFooter.css">
+  <link rel="stylesheet" href="/css/userHeader.css">
+  <link rel="stylesheet" href="/css/userHome.css">
+  <link rel="stylesheet" href="/css/userIntroduce.css">
+  <link rel="stylesheet" href="/css/userNavigate.css">
+  <link rel="stylesheet" href="/css/userNewArrival.css">
+  <link rel="stylesheet" href="/css/userProduct.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,11 +22,11 @@
 </head>
 <body>
   <header>
-    {{> header}}
+    {{> userHeader}}
   </header>
   
   <nav>
-    {{> navigate}}
+    {{> userNavigate}}
   </nav>
   
   <main>
@@ -37,7 +34,7 @@
   </main>
 
   <footer>
-    {{> footer}}
+    {{> userFooter}}
   </footer>
 </body>
 </html>
