--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -23,6 +23,13 @@
         </span> 
       </div>
     {{/each}}
-    
   </div>
+
+  <span class="see-more-button">
+    <button>Xem thêm</button>
+  </span>
 </div>
+
+<script>
+  
+</script>
