--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -1,5 +1,5 @@
 <div class="advertisement">
-  {{> advertise}}
+  {{> userAdvertise}}
 </div>
 
 <div class="flash-deal-board">
@@ -104,10 +104,6 @@
     {{/each}}
   </div>
 </div>
-
-<span class="see-more-button">
-  <button>Xem thêm</button>
-</span>
 
 <div class="dropup">
   <span>
