--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -25,7 +25,7 @@
 <div class="header-button">
   <i class="fi fi-rr-shopping-cart-add"></i>
 
-  <div class="dropdown-avatar">
+  {{!-- <div class="dropdown-avatar">
     <div class="avatar-image">
       <img src="../../img/4.jpg" alt="loading"/>
     </div>
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> --}}
   
   <i class="fi fi-rs-toggle-on" onclick="myFunction()"></i>
 </div>
