--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -8,91 +8,23 @@
         </div>
       </div>
 
+      
       <div class="dropdown-content">
         <div class="dropdown-content-dropright">
-          <div class="content-animation">
+            {{#each categories}}
             <div class="content">
-              <a href="">Trang Điểm</a>
+              <a href="">{{this.name}}</a>
               <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-            </div>               
-          </div>
-          <div class="dropdown-content-dropright-content">
+            </div>    
+            {{/each}}           
+          {{!-- <div class="dropdown-content-dropright-content">
             <div class="content-animation">
               <div class="content">
                 <a href="">Kem Lót</a>
               </div>               
             </div>
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Che Khuyết Điểm</a>
-              </div>               
-            </div>
-          </div>  
+          </div>   --}}
         </div>
-
-        <div class="dropdown-content-dropright">
-          <div class="content-animation">
-            <div class="content">
-              <a href="">Son Môi</a>
-              <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-            </div>               
-          </div>
-          <div class="dropdown-content-dropright-content">
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Kem Lót</a>
-              </div>               
-            </div>
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Che Khuyết Điểm</a>
-              </div>               
-            </div>
-          </div>
-        </div>
-
-        <div class="dropdown-content-dropright">
-          <div class="content-animation">
-            <div class="content">
-              <a href="">Chăm sóc da</a>
-              <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-            </div>               
-          </div>
-          <div class="dropdown-content-dropright-content">
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Kem Lót</a>
-              </div>               
-            </div>
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Che Khuyết Điểm</a>
-              </div>               
-            </div>
-          </div>  
-        </div>
-
-        <div class="dropdown-content-dropright">
-          <div class="content-animation">
-            <div class="content">
-              <a href="">Nước Hoa</a>
-              <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-            </div>               
-          </div>
-          <div class="dropdown-content-dropright-content">
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Kem Lót</a>
-              </div>               
-            </div>
-            <div class="content-animation">
-              <div class="content">
-                <a href="">Che Khuyết Điểm</a>
-              </div>               
-            </div>
-          </div>  
-        </div>
-        
       </div>
     </div>
 
