--- a/src/public/css/adminSidebar.css
+++ b/src/public/css/adminSidebar.css
@@ -23,7 +23,7 @@
     }
 
     p {
-      font-style: italic;
+      width: 20alic;
       margin-block-start: 0;
       margin-block-end: 0;
     }
@@ -43,8 +43,10 @@
       color: black;
       font-weight: bolder;
       text-transform: uppercase;
-      gap: 5px;
-      padding-left: 10px
+      gap: 10px;
+      padding-left: 10px;
+
+      i { font-size: 20px}
     };
     
     .sidebar-button:hover {
