--- a/src/public/css/adminUpdate.css
+++ b/src/public/css/adminUpdate.css
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow-x: auto;
 
-  .board-header {
+  .board-sidebar {
     width: 100%;
     display: flex;
     align-items: center;
@@ -17,7 +17,10 @@
       border: 2px solid #D1A6A6;
       padding: 20px;
     }
+  }
 
+  .table {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   table, th, td {
@@ -30,6 +33,9 @@
   th {
     background-color: #D1A6A6;
     height: 50px;
+    a { text-decoration: none }
+    i { color: black }
+    gap: 5px;
   }
 
   tr:nth-child(even){background-color: #f2f2f2}
