--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -1,27 +1,56 @@
 <div class="handle-products">
-  <form method="post" action="/admin/created">
+  <form method="post" action="/admin/created" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thêm sản phẩm mới</p>
     </div>
+    {{!-- <div class="form-group">
+      <label for="details">Loại gì nhể</label>
+      <select>
+        <option value="">Phấn má</option>
+        <option value="">Kem chống nắng</option>
+        <option value=""></option>
+        <option value=""></option>
+        <option value=""></option>
+      </select>
+    </div> --}}
     <div class="form-group">
-      <label for="brand">Nhập hãng sản phẩm</label>
+      <label for="brand">Hãng gì nhể</label>
       <input type="text" class="form-control" id="brand" name="brand">
     </div>
     <div class="form-group">
-      <label for="name">Nhập tên sản phẩm</label>
+      <label for="name">Tên gì nhể</label>
       <input type="text" class="form-control" id="name" name="name">
     </div>
     <div class="form-group">
-      <label for="price">Nhập giá sản phẩm</label>
+      <label for="price">Giá bao nhiêu nhể</label>
       <input type="text" class="form-control" id="price" name="price">
     </div>
     <div class="form-group">
-      <label for="description">Nhập mô tả sản phẩm</label>
+      <label for="description">Mô tả như nào nhể</label>
       <input type="text" class="form-control" id="description" name="description">
     </div>
     <div class="form-group">
-      <label for="details">Nhập chi tiết sản phẩm</label>
+      <label for="details">Chi tiết ra sao nhể</label>
       <input type="text" class="form-control" id="details" name="details">
+    </div>
+    <div class="form-group">
+      <label for="hotsale">Có hot không nhể</label>
+      <select name="hotsale">
+        <option value="no">Bình thường</option>
+        <option value="flash-sale">Đang Flash Sale</option>
+        <option value="hot">Đang hot</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="newArrival">Mới ra à</label>
+      <select name="newArrival">
+        <option value="no">Ra lâu rồi</option>
+        <option value="yes">Chuẩn luôn</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="details">Cuối cùng thì cho xin nốt cái ảnh</label>
+      <input type="file" name="avatar" id="avatar"/>
     </div>
     <div class="submit-button">
       <button title="submit" type="submit">Hoàn thành</button>
