--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -6,18 +6,18 @@
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
   <link rel="stylesheet" href="/css/adminCreate.css">
   <link rel="stylesheet" href="/css/adminUpdate.css">
-  <link rel="stylesheet" href="/css/adminHeader.css">
+  <link rel="stylesheet" href="/css/adminSidebar.css">
   <link rel="stylesheet" href="/css/adminHome.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <title>Cửa hàng bán lẻ mỹ phẩm chính hãng</title>
+  <title>{{title}}</title>
 </head>
 <body>
   <header>
-    {{> adminHeader}}
+    {{> adminSidebar}}
   </header>
   
   <main>
