--- a/src/public/css/adminSidebar.css
+++ b/src/public/css/adminSidebar.css
@@ -2,7 +2,7 @@
   left: 0;
   right: auto;
   width: 200px;
-  height: 100vh;
+  height: 100%;
   z-index: 1;
   position: fixed;
   background-color: #D1A6A6;
