--- a/src/resource/views/admin/updating.hbs
+++ b/src/resource/views/admin/updating.hbs
@@ -4,27 +4,59 @@
       <p>Sửa sản phẩm</p>
     </div>
     <div class="form-group">
-      <label for="brand">Sửa hãng sản phẩm</label>
-      <input type="text" class="form-control" value="{{product.brand}}" id="brand" name="brand">
+      <label for="brand">Hãng gì nhể</label>
+      <input type="text" class="form-control" id="brand" value="{{product.brand}}" name="brand" >
+      <span class="form-message"></span>
     </div>
+
     <div class="form-group">
-      <label for="name">Sửa tên sản phẩm</label>
-      <input type="text" class="form-control" value="{{product.name}}" id="name" name="name">
+      <label for="name">Tên gì nhể</label>
+      <input type="text" class="form-control" id="name" value="{{product.name}}" name="name">
+      <span class="form-message"></span>
     </div>
+
     <div class="form-group">
-      <label for="price">Sửa giá sản phẩm</label>
-      <input type="text" class="form-control" value="{{product.price}}" id="price" name="price">
+      <label for="price">Giá bao nhiêu nhể</label>
+      <input type="text" class="form-control" id="price" value="{{product.price}}" name="price">
+      <span class="form-message"></span>
     </div>
+
     <div class="form-group">
-      <label for="description">Sửa mô tả sản phẩm</label>
-      <textarea type="text" class="form-control" id="description" name="description">{{product.description}}</textarea>
+      <label for="description">Mô tả như nào nhể</label>
+      <input type="text" class="form-control" id="description" value="{{product.description}}" name="description">
+      <span class="form-message"></span>
     </div>
+
     <div class="form-group">
-      <label for="details">Sửa chi tiết sản phẩm</label>
-      <textarea type="text" class="form-control" id="details" name="details">{{product.details}}</textarea>
+      <label for="details">Chi tiết ra sao nhể</label>
+      <input type="text" class="form-control" id="details" value="{{product.details}}" name="details">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <label for="hotsale">Có hot không nhể</label>
+      <select name="hotsale">
+        <option value="no">Bình thường</option>
+        <option value="flash-sale">Đang Flash Sale</option>
+        <option value="hot">Đang hot</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="newArrival">Mới ra à</label>
+      <select name="newArrival">
+        <option value="no">Ra lâu rồi</option>
+        <option value="yes">Chuẩn luôn</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="details">Cuối cùng thì cho xin nốt cái ảnh</label>
+      <input type="file" name="avatar" id="avatar" />
     </div>
     <div class="submit-button">
       <button title="submit" type="submit">Hoàn thành</button>
     </div>
+
   </form>
 </div>
